Add list of recipe objects to app.js; Create recipes.ejs file which loops through all recipes; Link to partials files in homepage.ejs and recipes.ejs; Connect to Bootstrap; Create .gitignore directory;

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,3 +1,10 @@
+<% include ./partials/header %>
+
+
 <h1>HOME PAGE!!</h1>
 
 <p>Hi, welcome to Pesky Belly!</p>
+
+<a href="/recipes">View Recipes</a>
+
+<% include ./partials/footer %>
