--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,10 @@
 <html>
     <head>
         <title>Pesky Belly</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">    
+        
+        <!--Bootstrap-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> 
+        
     </head>
     
     <body>
