--- a/views/index_recipes.ejs
+++ b/views/index_recipes.ejs
@@ -16,11 +16,17 @@
          <% recipes.forEach(function(recipe){ %>
             <div class="col-md-3 col-sm-6">
                 <div class="thumbnail">
-                    <!--<h4><%= recipe.title %></h4>-->
                     <img src="<%= recipe.image %>">
                     <div>
-                        <h4><%=recipe.title%></h4>
+                        <!--<h4><%=recipe.title%></h4>-->
+                        
+                            <a style="margin:5px auto" href="" class="btn btn-danger"><h4><%=recipe.title%></h4></a>
+                        
+                        <!--<a href="" class="btn btn-danger"><h4><%=recipe.title%></h4></a>-->
                     </div>
+                    <!--<p>-->
+                    <!--    <a href="" class="btn btn-danger">More Info</a>-->
+                    <!--</p>-->
                 </div>
             </div>
         <% }); %>
