--- a/views/index_recipes.ejs
+++ b/views/index_recipes.ejs
@@ -18,15 +18,9 @@
                 <div class="thumbnail">
                     <img src="<%= recipe.image %>">
                     <div>
-                        <!--<h4><%=recipe.title%></h4>-->
-                        
-                            <a style="margin:5px auto" href="" class="btn btn-danger"><h4><%=recipe.title%></h4></a>
-                        
-                        <!--<a href="" class="btn btn-danger"><h4><%=recipe.title%></h4></a>-->
+                        <a style="margin:5px auto" href="/recipes/<%= recipe._id %>" class="btn btn-danger"><h4><%=recipe.title%></h4></a>
                     </div>
-                    <!--<p>-->
-                    <!--    <a href="" class="btn btn-danger">More Info</a>-->
-                    <!--</p>-->
+       
                 </div>
             </div>
         <% }); %>
