--- a/views/new_recipe.ejs
+++ b/views/new_recipe.ejs
@@ -8,6 +8,7 @@
             <form action="/recipes" method="POST">
                 <div class="form-group"><input class="form-control" type="text" name="recipe_title" placeholder="Recipe Title"></div>
                 <div class="form-group"><input class="form-control" type="text" name="recipe_image" placeholder="Image URL"></div>
+                <div class="form-group"><input class="form-control" type="text" name="recipe_description" placeholder="Description"></div>
                 <div class="form-group"><button class="btn btn-lg btn-block">Submit</button></div>
             </form> 
             <a href="/recipes">Back to Recipes Page</a>   
