--- a/views/recipes/index_recipes.ejs
+++ b/views/recipes/index_recipes.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 
 
@@ -29,4 +29,4 @@
 </div>
 
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
