Style notes and show page with Bootstrap and link to custom stylesheet (/public/stylesheets/main.css)

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,8 @@
         
         <!--Bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
-        
+        <!--Custom Stylesheet-->
+        <link rel="stylesheet" href="/stylesheets/main.css">
     </head>
     
     <body>
