--- a/views/notes/new.ejs
+++ b/views/notes/new.ejs
@@ -10,7 +10,7 @@
                 <div class="form-group"><input class="form-control" type="text" name="note[text]" placeholder="Type note here..."></div>
                 <div class="form-group"><button class="btn btn-lg btn-block">Submit</button></div>
             </form> 
-            <a href="#">Back to Recipe show page</a>   
+            <a href="/recipes">Back to Recipe show page</a>   
         </div>
     </div>
     
