Add 'heading' field to notes

--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -19,8 +19,11 @@
                     <div class="row">
                         <div class="col-md-12">
                             <hr>
-                            <strong><p><%=note.text%></p></strong>
-                            <span>17th April 2018</span>
+                            <span class="pull-right">17th April 2018</span>
+                            <strong><p><%=note.header%></p></strong>
+                            
+                            <p><%=note.text%></p>
+                            
                         </div>
                     </div>
                 <% }); %>
