--- a/views/notes/new.ejs
+++ b/views/notes/new.ejs
@@ -7,6 +7,7 @@
         <h1 style="text-align: center">Add a new note to <%= recipe.title %>...</h1>
         <div style="width:30%;margin: 35px auto;">
             <form action="/recipes/<%= recipe._id %>/notes" method="POST">
+                <div class="form-group"><input class="form-control" type="text" name="note[header]" placeholder="Type header here..."></div>
                 <div class="form-group"><input class="form-control" type="text" name="note[text]" placeholder="Type note here..."></div>
                 <div class="form-group"><button class="btn btn-lg btn-block">Submit</button></div>
             </form> 
