Add 'Edit recipe' route

--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -13,7 +13,8 @@
                  <p class="caption">
                      <%= recipe.description %>
                  </p>
-                   
+                    <p><a class="btn btn-success" href="/recipes/<%=recipe._id%>/edit">Edit</a></p>
+
              </div>
              <div class="well">
                  <div class="text-right">
