--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -4,10 +4,10 @@
 <div class="container">
     
     <div class="row">
-        <h1 style="text-align: center">Add a new comment to <%= recipe.title %>...</h1>
+        <h1 style="text-align: center">Edit Comment</h1>
         <div style="width:30%;margin: 35px auto;">
-            <form action="/recipes/<%= recipe._id %>/comments" method="POST">
-                <div class="form-group"><input class="form-control" type="text" name="comment[text]" placeholder="Type comment here..."></div>
+            <form action="/recipes/<%= recipe_id %>/comments/<%=comment._id%>?_method=PUT" method="POST">
+                <div class="form-group"><input class="form-control" type="text" name="comment[text]" value="<%=comment.text%>"></div>
                 <div class="form-group"><button class="btn btn-lg btn-block">Submit</button></div>
             </form> 
             <a href="/recipes">Back to Recipe show page</a>   
